--- a/resource.rc
+++ b/resource.rc
@@ -1,22 +1,40 @@
 #include <windows.h>
 
+#define xstr(x) #x
+#define str(x) xstr(x)
+
+#ifndef VERSION
+  #define VERSION 0.0.0
+#endif
+
+#ifndef FVERSION
+  #define FVERSION 0,0,0,0
+#endif
+
+#ifndef YEAR
+  #define YEAR 2025
+#endif
+
+#define PRODUCTNAME "ShowAllFiles"
+#define COMPANYNAME "Kamaran Layne"
+
 1 ICON "internal/app/icons/ShowAllFiles1.ico"
 
 1 VERSIONINFO
-FILEVERSION 0,0,1,0
-PRODUCTVERSION 0,0,1,0
+FILEVERSION FVERSION
+PRODUCTVERSION FVERSION
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
     BLOCK "040904B0"
     BEGIN
-      VALUE "CompanyName", "Kamaran Layne\0"
-      VALUE "FileDescription", "ShowAllFiles\0"
-      VALUE "FileVersion", "0.0.1.0\0"
-      VALUE "InternalName", "ShowAllFiles\0"
-      VALUE "OriginalFilename", "ShowAllFiles.exe\0"
-      VALUE "ProductName", "ShowAllFiles\0"
-      VALUE "ProductVersion", "0.0.1.0\0"
+      VALUE "LegalCopyright", "Copyright \xA9 " str(YEAR) " " COMPANYNAME "\0"
+      VALUE "CompanyName", COMPANYNAME
+      VALUE "FileDescription", PRODUCTNAME
+      VALUE "InternalName", PRODUCTNAME
+      VALUE "ProductName", PRODUCTNAME
+      VALUE "FileVersion", str(VERSION)
+      VALUE "ProductVersion", str(VERSION)
     END
   END
   BLOCK "VarFileInfo"
